--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcosgsfgme!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Magn'assurance{% endblock %}</title>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+</head>
+{% block header %}
+    <header>
+        <div>
+        <h1>Magn'assurance</h1>
+        </div>
+
+
+    </header>
+{% endblock %}
+
+
+
+<body>
+{% block body %}{% endblock %}
+
+</body>
+
+
+<footer>
+    © Magn'assurance 2020
+</footer>
+
 </html>
