--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,13 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}Magn'assurance : Comparateur d'assurance{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-        <p>dSDqs</p>
+    <header>
+        <div>
+        {% include 'default/_menu.html.twig' %}
+        </div>
+    </header>
 
-
+    <section>
+        {% include 'default/_main.html.twig' %}
+    </section>
 {% endblock %}
