--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,17 +5,17 @@
 
     <header>
         <div class="row">
-            <div class="col-sm-9"><h1>Magn'assurance</h1></div>
-            <div class="col-sm-3"><div>Connexion</div></div>
+            <div class="col-sm-4"><h1>Magn'assurance</h1></div>
+            <div class="col-sm-8 text-right">Connexion</div>
             <div class="col-sm-12">{% include 'default/_menu.html.twig' %}</div>
         </div>
     </header>
-        <div class="row">
+    <div class="row">
 
-                {% include 'default/_main.html.twig' %}
+        {% include 'default/_main.html.twig' %}
 
-        </div>
-</div>
+    </div>
+    </div>
 
 
 {% endblock %}
