--- a/templates/default/_main.html.twig
+++ b/templates/default/_main.html.twig
@@ -3,7 +3,7 @@
         <img src="https://dummyimage.com/200" alt="partenaires" title="image-des-partenaires">
     </div>
 </div>
-<div class="col-xs-6">
+<div class="col-xs-6 slick">
     <div>
         <form action="#" method="post">
             <div>
@@ -12,25 +12,15 @@
             </div>
             <button>Comparez</button>
         </form>
+    </div>
+    <div class="top">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
     </div>
 </div>
 <div class="col-xs-12"><img src="https://dummyimage.com/533x100 alt="partenaires" title="image-des-partenaires"></div>
 
 
 
-{#
-<div>
-    <div>
-    <img src="https://via.placeholder.com/450" alt="partenaires" title="image-des-partenaires">
-    </div>
-    <div>
-        <form action="#" method="post">
-            <div>
-                <label for="name">Entrez votre code postal :</label>
-                <input type="text" id="name" name="cp">
-            </div>
-            <button>Comparez</button>
-        </form>
-    </div>
-
-</div> #}
