Ajout d'une carrousselle slick fonctionnelle

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,24 @@
 @import "~font-awesome";
 @import "~bootstrap";
 
+
+
+.top{
+  display: flex;
+}
+
+.top{}.myarrow{
+  color: red;
+
+
+
+      }
+
+.top{} .top_items{
+
+       }
+
+
 header{
   height: 250px;
 }
@@ -60,4 +78,5 @@ ul {
 .onglet{
   margin: 25px ;
 }
+
 
