--- a/templates/default/_main.html.twig
+++ b/templates/default/_main.html.twig
@@ -3,21 +3,29 @@
         <img src="https://dummyimage.com/200" alt="partenaires" title="image-des-partenaires">
     </div>
 </div>
-<div class="col-xs-6 slick">
-    <div>
-        <form action="#" method="post">
-            <div>
-                <label for="name">Entrez votre code postal :</label>
-                <input type="text" id="name" name="cp">
-            </div>
-            <button>Comparez</button>
-        </form>
-    </div>
-    <div class="top">
-        <div>Item 1</div>
-        <div>Item 2</div>
-        <div>Item 3</div>
-        <div>Item 4</div>
+<div class="col-xs-2 offset-2">
+    <div class="top text-center ">
+        <div>
+            <form action="#" method="post">
+                <div class="form-example ">
+                    <input type="text" placeholder="Votre nom" name="name" id="name" required>
+                </div>
+            </form>
+        </div>
+        <div>
+            <form action="#" method="post">
+                <div>
+                    <input type="text" id="name" name="cp" placeholder="Code postal">
+                </div>
+            </form>
+        </div>
+        <div>
+            <form action="#" method="post">
+                <div>
+                    <input type="text" id="name" name="cp" placeholder="Fix/portable">
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 <div class="col-xs-12"><img src="https://dummyimage.com/533x100 alt="partenaires" title="image-des-partenaires"></div>
