--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,7 +10,7 @@
 
                 <ul>
                 <li><a href="{{ path('app_register') }}">Inscription</a></li>
-                <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a href="{{ path('app_login') }}"><i class="fa fa-search"></i>Connexion</a></li>
                 </ul>
             </div>
             <div class="col-sm-12">{% include 'default/_menu.html.twig' %}</div>
@@ -22,6 +22,7 @@
 
 
     </div>
+
     </div>
 
 
