--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=0">
 
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>{% block title %}Magn'assurance : Comparateur d'assurance{% endblock %}
     </title>
@@ -20,10 +20,10 @@
 
 <div class="container-fluid">
 
-        {% block body %}
+    {% block body %}
 
 
-        {% endblock %}
+    {% endblock %}
 
 
 
