--- a/templates/default/_main.html.twig
+++ b/templates/default/_main.html.twig
@@ -6,29 +6,59 @@
 <div class="col-xs-2 offset-2">
     <div class="top text-center ">
         <div>
-            <form action="#" method="post">
+            <form action="{{ path('car_choice') }}" method="post">
                 <div class="form-example ">
-                    <input type="text" placeholder="Votre nom" name="name" id="name" required>
+                    <input type="text" placeholder="Nom de famille" name="firstName" id="firstname" required>
                 </div>
             </form>
         </div>
         <div>
-            <form action="#" method="post">
                 <div>
-                    <input type="text" id="name" name="cp" placeholder="Code postal">
+                    <input type="text" id="lastname" name="lastName" placeholder="Prénom">
                 </div>
-            </form>
         </div>
         <div>
-            <form action="#" method="post">
                 <div>
-                    <input type="text" id="name" name="cp" placeholder="Fix/portable">
+                    <label for="start">Date de naissance</label>
+                    <input type="date" id="start" name="trip-start"
+                           value="2018-07-22"
+                           min="2018-01-01" max="2018-12-31">
                 </div>
-            </form>
         </div>
+        <div>
+                <div>
+                    <input type="tel" id="Phone" name="Phone" placeholder="Fix/portable">
+                </div>
+        </div>
+        <div>
+                <div>
+                    <input type="text" id="city" name="City" placeholder="Ville">
+                </div>
+        </div>
+        <div class="displayCheck">
+            <div>
+                <input type="checkbox" id="house" name="House">
+                <i class="fa fa-home" aria-hidden="true"></i>
+                <input type="checkbox" id="prévoyance" name="Prévoyance">
+                <i class="fa fa-umbrella" aria-hidden="true"></i>
+                <input type="checkbox" id="car" name="Car">
+                <i class="fa fa-car" aria-hidden="true"></i>
+
+            </div>
+        </div>
+
+
+
+
+        <div class="btn-group-toggle " data-toggle="buttons">
+            <label class="btn btn-secondary active btn-block">
+                <input type="checkbox" checked autocomplete="off">Commencez !
+            </label>
+        </div>
+             </form>
     </div>
 </div>
-<div class="col-xs-12"><img src="https://dummyimage.com/533x100 alt="partenaires" title="image-des-partenaires"></div>
+<div class="col-xs-12"><img src="https://dummyimage.com/533x100" alt="partenaires"></div>
 
 
 
