--- a/templates/prospect/_form.html.twig
+++ b/templates/prospect/_form.html.twig
@@ -1,4 +1,15 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Prospect{% endblock %}
+
+{% block body %}
+<div class="container-fluid"></div>
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+    {{ form_row(form.email) }}
+
+
+
 {{ form_end(form) }}
+
+{% endblock %}
