--- a/templates/default/_footer.html.twig
+++ b/templates/default/_footer.html.twig
@@ -1,33 +1,29 @@
-<footer class="footer">
-<div class="flex">
-<div>
-    <ul>
-        <li>Notre service de comparaison</li>
-        <li>Nous rejoindre</li>
-    </ul>
-</div>
-<div>
-    <ul>
-        <li>Guide auto</li>
-        <li>Guide habitation</li>
-        <li>Guide santé</li>
-        <li>Guide Epargne</li>
-        <li>Guide Retraite</li>
-    </ul>
-</div>
-<div>
-    <div>
-        <ul>
-            <li>Nous contacter</li>
-            <li>Espace presse</li>
-            <li>Mentions légales</li>
-            <li>Politique des cookies</li>
-
-        </ul>
+<footer class="fixed-bottom">
+    <div class="row">
+        <div class="col-4 text-center">
+            <ul>
+                <li>Notre service de comparaison</li>
+                <li>Nous rejoindre</li>
+            </ul>
+        </div>
+        <div class="col-4 text-center">
+            <ul>
+                <li>Guide auto</li>
+                <li>Guide habitation</li>
+                <li>Guide santé</li>
+                <li>Guide Epargne</li>
+                <li>Guide Retraite</li>
+            </ul>
+        </div>
+        <div class="col-4 text-center">
+            <ul>
+                <li>Nous contacter</li>
+                <li>Espace presse</li>
+                <li>Mentions légales</li>
+                <li>Politique des cookies</li>
+            </ul>
+        </div>
     </div>
-</div>
-</div>
-    <div>© Magn'assurance 2020</div>
 </footer>
 
 
