--- a/templates/default/_main.html.twig
+++ b/templates/default/_main.html.twig
@@ -1,9 +1,9 @@
-<div class="col-xs-6">
-    <div>
-        <img src="https://dummyimage.com/200" alt="partenaires" title="image-des-partenaires">
-    </div>
+<div class="col-6 box">
+
+    <img src="https://dummyimage.com/200" alt="partenaires" title="image-des-partenaires">
+
 </div>
-<div class="col-xs-2 offset-2">
+<div class="col-6 box align-self-center">
     <div class="top text-center ">
         <div>
             <form action="{{ path('car_choice') }}" method="post">
@@ -13,27 +13,27 @@
             </form>
         </div>
         <div>
-                <div>
-                    <input type="text" id="lastname" name="lastName" placeholder="Prénom">
-                </div>
+            <div>
+                <input type="text" id="lastname" name="lastName" placeholder="Prénom">
+            </div>
         </div>
         <div>
-                <div>
-                    <label for="start">Date de naissance</label>
-                    <input type="date" id="start" name="trip-start"
-                           value="2018-07-22"
-                           min="2018-01-01" max="2018-12-31">
-                </div>
+            <div>
+                <label for="start">Date de naissance</label>
+                <input type="date" id="start" name="trip-start"
+                       value="2018-07-22"
+                       min="2018-01-01" max="2018-12-31">
+            </div>
         </div>
         <div>
-                <div>
-                    <input type="tel" id="Phone" name="Phone" placeholder="Fix/portable">
-                </div>
+            <div>
+                <input type="tel" id="Phone" name="Phone" placeholder="Fix/portable">
+            </div>
         </div>
         <div>
-                <div>
-                    <input type="text" id="city" name="City" placeholder="Ville">
-                </div>
+            <div>
+                <input type="text" id="city" name="City" placeholder="Ville">
+            </div>
         </div>
         <div class="displayCheck">
             <div>
@@ -48,17 +48,15 @@
         </div>
 
 
-
-
         <div class="btn-group-toggle " data-toggle="buttons">
             <label class="btn btn-secondary active btn-block">
                 <input type="checkbox" checked autocomplete="off">Commencez !
             </label>
         </div>
-             </form>
+        </form>
     </div>
 </div>
-<div class="col-xs-12"><img src="https://dummyimage.com/533x100" alt="partenaires"></div>
+<div class="col-12 box"><img src="https://dummyimage.com/533x100" alt="partenaires"></div>
 
 
 
