--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,18 +7,25 @@
         <div class="row">
             <div class="col-sm-4"><h1>Magn'assurance</h1></div>
             <div class="col-sm-8 text-right">
-
                 <ul>
                 <li><a href="{{ path('app_register') }}">Inscription</a></li>
-                <li><a href="{{ path('app_login') }}"><i class="fa fa-search"></i>Connexion</a></li>
+                <li><a href="{{ path('app_login') }}">Connexion</a></li>
                 </ul>
             </div>
             <div class="col-sm-12">{% include 'default/_menu.html.twig' %}</div>
         </div>
     </header>
-    <div class="row">
+    <div class="row main">
 
         {% include 'default/_main.html.twig' %}
+        {% include 'default/_main.html.twig' %}
+        {% include 'default/_main.html.twig' %}
+        {% include 'default/_main.html.twig' %}
+        {% include 'default/_main.html.twig' %}
+
+
+
+
 
 
     </div>
