--- a/templates/prospect/_form.html.twig
+++ b/templates/prospect/_form.html.twig
@@ -1,15 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Prospect{% endblock %}
-
-{% block body %}
-<div class="container-fluid"></div>
 {{ form_start(form) }}
-
-    {{ form_row(form.email) }}
-
-
-
+    {{ form_widget(form) }}
+<button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
-
-{% endblock %}
