--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,79 +3,78 @@
 @import "~font-awesome";
 @import "~bootstrap";
 
+header{
+  background: rgb(255,255,255);
+  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,127,0,0.9164040616246498) 22%);
+
+}
 
 
+
+html,body{
+  background-color: #a7ffa2;
+  height: 100%;
+  min-height: 100vh;
+}
+
+.box{
+  border: #2b542c 1px solid;
+}
+
+.container-fluid{
+  padding: 0;
+  margin: 0;
+}
+
+@media (min-width: 1200px){
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1500px;
+  }
+}
+
+footer{
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 7%, rgba(255,127,0,0.8519782913165266) 95%);
+
+}
+
+
+.container{
+  min-height: 100vh;
+}
+
+.main{
+  margin-top: 10rem;
+  background-color: #a7ffa2;
+}
 
 .top{
   display: flex;
+  align-items: center;
 }
 
 .top{}.myarrow{
   color: red;
 
 
-
       }
 
-.top{} .top_items{
-
-       }
 
 
-header{
-  height: 250px;
-}
 
 h1{
   color: red;
 }
 
-nav{
-  margin-top: 20px;
-}
+
 
 ul {
   list-style: none;
 }
 
 
-.footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-.flex{
-  display: flex;
-  justify-content: space-between;
-}
-
-.deroulant{
-  display: none;
-  position: absolute;
 
 
 
-}
-.option{
-  float: left;
-  margin: 25px;
-}
-.option2{
-  padding-right: 10px;
-  margin: 25px;
-}
-
-.listonglet{
-  display: flex;
-  list-style-type: none;
-  justify-content: space-between;
-  padding: 0px;
 
 
-}
-
-.onglet{
-  margin: 25px ;
-}
