Création GUID/Config accès fonctionnelle

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,6 +10,7 @@
                 <ul>
                 <li><a href="{{ path('app_register') }}">Inscription</a></li>
                 <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a href="{{ path('prospectBoard_index') }}">Connexion</a></li>
                 </ul>
             </div>
             <div class="col-sm-12">{% include 'default/_menu.html.twig' %}</div>
@@ -18,10 +19,7 @@
     <div class="row main">
 
         {% include 'default/_main.html.twig' %}
-        {% include 'default/_main.html.twig' %}
-        {% include 'default/_main.html.twig' %}
-        {% include 'default/_main.html.twig' %}
-        {% include 'default/_main.html.twig' %}
+
 
 
 
