--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,9 +8,19 @@
             <div class="col-sm-4"><h1>Magn'assurance</h1></div>
             <div class="col-sm-8 text-right">
                 <ul>
-                <li><a href="{{ path('app_register') }}">Inscription</a></li>
-                <li><a href="{{ path('app_login') }}">Connexion</a></li>
-                <li><a href="{{ path('prospectBoard_index') }}">Connexion</a></li>
+                    {% if app.user %}
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li><a href="{{ path('admin') }}"><i class="fa fa-cogs"></i> Administration</a></li>
+                        {% endif %}
+                        <li><a href="{{ path('') }}">Profile</a></li>
+                        <li><a href="{{ path('app_logout') }}"><i class="fa fa-sign-out"></i> Log out</a></li>
+                    {% else %}
+                        <li><a href="{{ path('app_register') }}">Inscription</a></li>
+                        <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                        <li><a href="{{ path('prospectBoard_index') }}">Etat de votre demande</a></li>
+
+
+                    {% endif %}
                 </ul>
             </div>
             <div class="col-sm-12">{% include 'default/_menu.html.twig' %}</div>
