Tentative envoie id dans dashboard user

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -12,7 +12,7 @@
                         {% if is_granted('ROLE_ADMIN') %}
                             <li><a href="{{ path('admin') }}"><i class="fa fa-cogs"></i> Administration</a></li>
                         {% endif %}
-                        <li><a href="{{ path('') }}">Profile</a></li>
+                        <li><a href="{{ path('agency_user') }}">Profile</a></li>
                         <li><a href="{{ path('app_logout') }}"><i class="fa fa-sign-out"></i> Log out</a></li>
                     {% else %}
                         <li><a href="{{ path('app_register') }}">Inscription</a></li>
