--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,10 @@
 
 </div>
 
-{% include 'default/_footer.html.twig' %}
+{% block footer %}
+    {% include 'default/_footer.html.twig' %}
+{% endblock %}
+
 {% block javascripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
