Correction caroussel homepage

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -63,16 +63,25 @@ footer{
   min-height: 100vh;
 }
 
-.top{
-  display: flex;
-  align-items: center;
+
+
+
+.slider{
 }
 
-.top{}.myarrow{
-  color: red;
+.slider .prevArrow{
+  font-size: 2rem;
 
 
-      }
+
+
+
+}
+.slider .nextArrow{
+  font-size: 2rem;
+
+}
+
 
 
 
